# family-finance-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
bot/: main.py
bot/core/: config.py  database.py  logging.py  nct_category_map.json
bot/db/: models.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 0001_initial_schema.py  0002_split_gtin_ntin.py  0003_product_catalog.py  0004_receipt_dedup.py  0005_category_family.py
bot/db/repository/: category.py  family.py  invite.py  member.py  product.py  receipt.py  rule.py
bot/handlers/: commands.py  keyboards.py  receipt.py  reports.py
bot/services/: classifier.py  classify_common.py  classify_gemini.py  claude_classify.py  dedup.py  exchange.py  gemini_call.py  gemini_retry.py  identifiers.py  money.py  nct.py  ofd.py  qr.py  receipt_text.py  reporter.py  schemas.py  vision.py  vision_common.py  vision_gemini.py
docs/: PRODUCT_PLAN.md
scripts/: ofd_probe.py
tests/: conftest.py
tests/handlers/: test_command_handlers.py  test_receipt_handler.py  test_reports.py
tests/repository/: test_category_repo.py  test_invite_repo.py  test_member_repo.py  test_product_repo.py  test_receipt_repo.py  test_rule_repo.py
tests/services/: test_classifier.py  test_classify_gemini.py  test_dedup.py  test_exchange.py  test_gemini_retry.py  test_nct.py  test_ofd.py  test_qr.py  test_receipt_text.py  test_reporter.py  test_vision.py  test_vision_gemini.py
