[project]
name = "family-finance-bot"
version = "0.1.0"
description = "Telegram bot for family expense tracking via Claude Vision"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "saschel88" }]
dependencies = [
    "python-telegram-bot[ext]>=21.0,<22.0",
    "anthropic>=0.40.0,<0.50.0",
    "sqlalchemy[asyncio]>=2.0.30,<2.1.0",
    "alembic>=1.13.0,<1.14.0",
    "asyncpg>=0.29.0,<0.31.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.5.0,<2.6.0",
    "structlog>=24.0.0,<25.0.0",
    "httpx>=0.27.0,<0.28.0",
    "watchfiles>=0.21.0,<1.0.0",
]

[dependency-groups]
dev = [
    "black>=24.4.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "mypy>=1.10.0,<1.11.0",
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-postgresql>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "respx>=0.21.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

# ---------------------------------------------------------------------------
# Formatter / linter configuration
# ---------------------------------------------------------------------------

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["bot", "tests"]

# ---------------------------------------------------------------------------
# Type checker
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Test runner
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["bot"]
branch = true
omit = [
    "bot/db/migrations/*",
    "bot/main.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
